2008-01-02  POTHIER Benoit  <benoit.pothier@gmx.net>

	Do not create libjpeg dynamic libs.
	* configure.ac: Here.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Fix exit status.
	* src/liburbi/tests/liburbi-check.as: The main program
	should exit 0, it is cleanup that gives the final real
	exit status.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	liburbi-check cleanup.
	* src/liburbi/tests/liburbi-check.as: Remove dead comments.
	Use children_status for the final exit status.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Catch invalid options.
	* src/liburbi/uobject.cc: here.
	Add use more usual iterator names.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Catch up with children.as.
	* src/liburbi/tests/liburbi-check.as: here.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	Improve CLI.
	* src/liburbi/uobject.cc: Fix the CLI.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Declare vars in generated code.
	* src/liburbi/uobject.cc: Here when function return value is sent.
	* src/liburbi/uvar.cc: Here when the urbi::UVar is created.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Adapt tests for new server/buildaux conventions.
	* src/liburbi/tests/liburbi-check.as: 
	   - Start server with --period <period>.
	   - Redirect fd 3 to stderr. 

2007-12-18  Akim Demaille  <akim.demaille@free.fr>

	src/liburbi/tests.
	* Makefile.am, configure.ac, src/liburbi/Makefile.am: Adjust.
	* tests: Move to...
	* src/liburbi/tests: here.

2007-12-13  Akim Demaille  <akim.demaille@free.fr>

	Remove useless declaration.
	* src/liburbi/umain.cc: urbi::main is declared in uobject.hh, which
	is included.

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Use m4sh.
	* tests/liburbi-check.as (find_srcdir): Remove, provided by m4sh.
	and useless :)

2007-12-11  Akim Demaille  <demaille@gostai.com>

	Use m4sh.
	* tests/liburbi-check.as (find_urbi_server): Remove.

2007-12-05  Guillaume Deslandes  <deslandes@gostai.com>

	Exit on -v or --version.